--- a/Convenience-Store-Entyti/Convenience-Store-Entyti/Convenience-Store-Entyti.csproj
+++ b/Convenience-Store-Entyti/Convenience-Store-Entyti/Convenience-Store-Entyti.csproj
@@ -58,7 +58,10 @@
     <Compile Include="Account.cs">
       <DependentUpon>CStoreNew.tt</DependentUpon>
     </Compile>
+    <Compile Include="BS_Layer\BLAccount.cs" />
+    <Compile Include="BS_Layer\BLCustomer.cs" />
     <Compile Include="BS_Layer\BLDetail.cs" />
+    <Compile Include="BS_Layer\BLEmployee.cs" />
     <Compile Include="BS_Layer\BLInvoice.cs" />
     <Compile Include="BS_Layer\BLManuafacture.cs" />
     <Compile Include="BS_Layer\BLProduct.cs" />
@@ -83,11 +86,29 @@
     <Compile Include="Customer.cs">
       <DependentUpon>CStoreNew.tt</DependentUpon>
     </Compile>
+    <Compile Include="DanhMuc\FrmAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\FrmAccount.Designer.cs">
+      <DependentUpon>FrmAccount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DanhMuc\FrmCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\FrmCustomer.Designer.cs">
+      <DependentUpon>FrmCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="DanhMuc\FrmDetail.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DanhMuc\FrmDetail.Designer.cs">
       <DependentUpon>FrmDetail.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DanhMuc\FrmEmployee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhMuc\FrmEmployee.Designer.cs">
+      <DependentUpon>FrmEmployee.cs</DependentUpon>
     </Compile>
     <Compile Include="DanhMuc\FrmInvoice.cs">
       <SubType>Form</SubType>
@@ -160,8 +181,17 @@
     <Compile Include="Type.cs">
       <DependentUpon>CStoreNew.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DanhMuc\FrmAccount.resx">
+      <DependentUpon>FrmAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhMuc\FrmCustomer.resx">
+      <DependentUpon>FrmCustomer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DanhMuc\FrmDetail.resx">
       <DependentUpon>FrmDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhMuc\FrmEmployee.resx">
+      <DependentUpon>FrmEmployee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DanhMuc\FrmInvoice.resx">
       <DependentUpon>FrmInvoice.cs</DependentUpon>
